Tue Sep  1 00:12:14 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Format.pm (which): Fixes to give proper output for large
 	numbers of matches.

	* lib/Mj/SimpleDB/Text.pm (get_matching_regexp): Better log
 	message; call _re_match instead of comparing directly.
	(get_matching_quick_regexp): Ditto.

	* lib/Mj/SubscriberList.pm: Remove fields not needed because of
 	the registration database.

	* lib/Majordomo.pm (who_chunk): When we need to strip out
 	comments, allocate an Mj::Addr and work with it.

	* lib/Mj/List.pm (get_member): Return the canonical form of the
 	address as the key, not the address itself.

	* lib/Majordomo.pm (set): Forgot to make the list.

	* lib/Mj/TextOutput.pm (unalias): Use proper arguments: the victim
 	is the supplied address.

	* lib/Majordomo.pm (_unalias): Return a proper value.

Mon Aug 31 00:04:59 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/Mj/Token.pm (confirm): Make sure that we pass
 	MIME::Entity::build a string for an address instead of an Addr
 	object; it can't deal with it.

	* lib/Majordomo.pm (alias): Don't generate or pass 'mismatch'.
	(_unalias): New function.
	(unalias): Convert to work with new global alias list and do
 	security checking.

Sun Aug 30 00:04:51 1998  Jason L Tibbitts  <tibbs@morpheus.hpc.uh.edu>

	* lib/parser_data.pl: 'unalias' no longer takes a list.

	* lib/Majordomo.pm (connect): The trigger command doesn't take
 	addresses.

	* lib/Mj/Token.pm (t_info): Untaint the token.

	* lib/Majordomo.pm (set): No need to validate the addresses.
	(sessioninfo): No locking on session files.
	(connect): Ditto.
	(reject): Sessions don't go through the filespace. (How long has
 	this been broken?)

	* lib/Mj/SimpleDB/Text.pm (get_matching): Enclose regexp in '/'
 	delimiters.
	(get_matching_quick): Ditto.
	(replace): Can take a coderef to use to modify the values.  This
 	brings it very close to the mogrify function.
